--- a/.github/workflows/tutorial1.yml
+++ b/.github/workflows/tutorial1.yml
@@ -2,21 +2,35 @@ name: tutorial1
 on: push
 
 jobs:
-    job1:
-         name: job1
-         runs-on: ubuntu-latest
-         steps:
-         - name: step1
-           run: echo "Hello from job1"
-    job2:
-         name: job2
-         runs-on: windows-latest
-         steps:
-         - name: step2
-           run: echo " hellow from job 2"
+  job1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: step1
+        run: |
+          echo "Hello from job1"
+          echo "Today's date is $(date)"
 
-    job3:
-         runs-on: ubuntu-latest
-         steps:
-         - name: step 3
-           run: echo "hello from job 3"
+  job2:
+    runs-on: windows-latest
+    steps:
+      - name: step2
+        run: |
+          echo "hello from job 2"
+          echo "Today's date is $(date)"
+
+  job3:
+    runs-on: ubuntu-latest
+    steps:
+      - name: step3
+        run: |
+          echo "hello from job 3"
+          echo "Today's date is $(date)"
+
+  job4:
+    needs: [job1, job2]
+    runs-on: ubuntu-latest
+    steps:
+      - name: step4
+        run: |
+          echo "I am job 4"
+          echo "Today's date is $(date)"
