--- a/.github/workflows/tutorial1.yml
+++ b/.github/workflows/tutorial1.yml
@@ -5,6 +5,10 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
       - name: step1
         run: |
           echo "Hello from job1"
